Fixed the bug where the text in the hero section spilled over to the boys section

--- a/styles.css
+++ b/styles.css
@@ -2,21 +2,15 @@ body {
     margin: 0;
 }
 
-.body {
-    display: flex;
-}
-
-/* Start of hero/header section */
-
-.hero {
-    background-color: #1F2937;
-    height: 500px;
+.container {
     display: flex;
     flex-direction: column;
-    flex: 1;
 }
 
+/* header section */
+
 .header {
+    background-color: #1F2937;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -29,46 +23,58 @@ body {
     color: #F9FAF8;
 }
 
-.main-container {
+/* end of header section */
+
+/* Start of hero section */
+.body-container {
     display: flex;
     justify-content: space-between;
+    background-color: #1F2937;
     align-items: center;
+    margin-bottom: 50px;
+    padding: 85px;
 }
 
-.body {
+.body-text {
     display: flex;
     flex-direction: column;
+    flex-basis: 400px;
     padding: 0px 120px;
     width: 400px;
 }
 
-.hero-main-text {
-    font-size: 48px;
-    font-weight: bold;
-    color: #F9FAF8;
-    margin-bottom: 0;
-}
-
-.hero-secondary-text {
-    font-size: 18px;
-    color: #e5e7eb;
-}
 
 button {
     background-color: #3882F6;
     color: white;
     width: 100px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    border: black solid 3px;
+    padding: 10px;
+    border-radius: 24px;
 }
 
-.rocky-mylo {
+.body-image img{
     border: 6px solid black;
     border-radius: 25px;
     width: 700px;
     height: auto;
-    margin-right: 130px;
-    margin-top: 50px;
 }
-/* End of hero/header section */
+
+h2 {
+    font-size: 48px;
+    font-weight: bold;
+    color: #F9FAF8;
+    margin: 0;
+}
+
+p {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+/* End of hero */
 
 
 /* Start call to action */
